--- a/index.html
+++ b/index.html
@@ -15,12 +15,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>LA</h1>
-        <p>- personal website</p>
-
-
-        <p class="view"><a href="https://github.com/luisalt">View My GitHub Profile</a></p>
-
+        <h1>Luis Alt</h1>
+        <p>*Over the last decade, I’ve been helping people and brands to serve better. This website is a showcase of my work.*
+</p>
       </header>
       <section>
         <h3>
