--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>LA by luisalt</title>
+    <title>Luis Alt</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,14 +16,14 @@
     <div class="wrapper">
       <header>
         <h1>Luis Alt</h1>
-        <p>*Over the last decade, I’ve been helping people and brands to serve better. This website is a showcase of my work.*
+        <p>Over the last decade, I’ve been helping people and brands to serve better. This website is a showcase of my work.
 </p>
       </header>
       <section>
         <h3>
 <a id="hello" class="anchor" href="#hello" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hello!</h3>
 
-<p>My name is LA and here you will find information about my work. </p>
+<p>Here you will find information about my work. </p>
 
 <h3>
 <a id="i-make-projects-i-write-i-teach-and-i-speak-at-events" class="anchor" href="#i-make-projects-i-write-i-teach-and-i-speak-at-events" aria-hidden="true"><span class="octicon octicon-link"></span></a>I make projects, I write, I teach and I speak at events.</h3>
