--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Luis Alt</h1>
+        <h1>Hello,</h1>
+        <h1>I'm Luis Alt!</h1>
         <p>Over the last decade, I’ve been helping people and brands to serve better. This website is a showcase of my work.
 </p>
       </header>
