--- a/index.html
+++ b/index.html
@@ -15,14 +15,11 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Hello,</h1>
-        <h1>I'm Luis Alt!</h1>
+        <h1>Hello,</br>I'm Luis Alt</h1>
         <p>Over the last decade, I’ve been helping people and brands to serve better. This website is a showcase of my work.
 </p>
       </header>
       <section>
-        <h3>
-<a id="hello" class="anchor" href="#hello" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hello!</h3>
 
 <p>Here you will find information about my work. </p>
 
