--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
       </header>
       <section>
 <h3>
-<a id="i-make-projects-i-write-i-teach-and-i-speak-at-events" class="anchor" href="#i-make-projects-i-write-i-teach-and-i-speak-at-events" aria-hidden="true"><span class="octicon octicon-link"></span></a>I make projects, I write, I teach and I speak at events.</h3>
+I lead innovation and service design projects,</br>
+I write bestselling books, I teach all around the globe</br>
+and I speak at events in portuguese, spanish and english.</h3>
 
-<p>I am the founder of <a href="http://www.liveworkstudio.com/">Livework</a> in Brazil - a global innovation and service design studio - and <a href="http://www.eiselab.com.br/en/">EISE</a> - the first School of Service Design in the world. I've also created the first Design Thinking course in Latin America at renowned business school <a href="www.espm.br">ESPM</a>, and I also teach at Transdisciplinary Design Master at <a href="http://www.newschool.edu/parsons/mfa-transdisciplinary-design/">Parsons New School for Design</a> in New York City and at a post-graduate MBA at <a href="http://www.faap.br">FAAP</a> in São Paulo. I am the author of Design Thinking Brasil, a best-selling book published by Campus-Elsevier and of the upcoming "Servir Bem para Servir Sempre", a book about the importance of serving for both large and small businesses and how to do it. I speak at events globally in portuguese, spanish and english about Service Design, Design Thinking, Innovation Metrics and High-Performance Cultures. </p>
+<p>I am the founder of <a href="http://www.liveworkstudio.com/">Livework</a> in Brazil - a global innovation and service design studio - and <a href="http://www.eiselab.com.br/en/">EISE</a> - the first School of Service Design in the world. I've also created the first Design Thinking course in Latin America at renowned business school <a href="http://www.espm.br">ESPM</a>, and I also teach at Transdisciplinary Design Master at <a href="http://www.newschool.edu/parsons/mfa-transdisciplinary-design/">Parsons New School for Design</a> in New York City and at a post-graduate MBA at <a href="http://www.faap.br">FAAP</a> in São Paulo. I am the author of Design Thinking Brasil, a best-selling book published by Campus-Elsevier and of the upcoming "Servir Bem para Servir Sempre", a book about the importance of serving for both large and small businesses and how to do it. I speak at events globally in portuguese, spanish and english about Service Design, Design Thinking, Customer Experience, Innovation Metrics and High-Performance Cultures. </p>
 
 <h3>
 <a id="want-to-chat" class="anchor" href="#want-to-chat" aria-hidden="true"><span class="octicon octicon-link"></span></a>Want to chat?</h3>
