--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <body>
 
-        <div class="container-fluid section-rivers" id="luisalt">
+        <div class="container-fluid section-intro">
                 <h2>Hello,</br>I'm Luis Alt</h2>
                 <p>Over the last decade, I’ve been helping people and brands to serve better. This website is a showcase of my work.</p>
             </div>
