i think i'm getting it.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       
 
-        <div class="container-fluid section-rivers">
+        <div class="container-fluid section-one">
         
         <div class="container">
 
