Changed Ventures background.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <div class="container">
 
-                <h2>Hello,</br>I'm Luis Alt</h2>
+                <h2>Hello,</br>I'm Luis Alt!</h2>
                 <p>Over the last decade, I’ve been helping people and brands to provide better services. I lead innovation and service design projects, I write bestselling books and articles on the subject, I teach at renowned universities around the globe and I speak at events in portuguese, spanish and english.</p>
         
             </div>
