Back to normal.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         </div>
 
-        <div class="container-fluid section-chat">
+        <div class="container-fluid section-one">
 
         <h2>Want to chat?</h2>
         <p>Please contact me at <a href="mailto:mail@luisalt.com">mail@luisalt.com</a>.</p>
