--- a/index.html
+++ b/index.html
@@ -37,19 +37,24 @@
 
         <div class="container-fluid section-one">
 
-        <h2>My Current Ventures</h2>
+            <div class="container">
 
-        <p>I am the founder of <a href="http://www.liveworkstudio.com/">Livework</a> in Brazil - a global innovation and service design studio - and <a href="http://www.eiselab.com.br/en/">EISE</a> - the first School of Service Design in the world. I've also created the first Design Thinking course in Latin America at renowned business school <a href="http://www.espm.br">ESPM</a>, and I also teach at Transdisciplinary Design Master at <a href="http://www.newschool.edu/parsons/mfa-transdisciplinary-design/">Parsons New School for Design</a> in New York City and at a post-graduate MBA at <a href="http://www.faap.br">FAAP</a> in São Paulo. I am the author of Design Thinking Brasil, a best-selling book published by Campus-Elsevier and of the upcoming "Servir Bem para Servir Sempre", a book about the importance of serving for both large and small businesses and how to do it. I speak at events globally in portuguese, spanish and english about Service Design, Design Thinking, Customer Experience, Innovation Metrics and High-Performance Cultures. </p>
+            <h2>My Current Ventures</h2>
 
-        </div>
+            <p>I am the founder of <a href="http://www.liveworkstudio.com/">Livework</a> in Brazil - a global innovation and service design studio - and <a href="http://www.eiselab.com.br/en/">EISE</a> - the first School of Service Design in the world. I've also created the first Design Thinking course in Latin America at renowned business school <a href="http://www.espm.br">ESPM</a>, and I also teach at Transdisciplinary Design Master at <a href="http://www.newschool.edu/parsons/mfa-transdisciplinary-design/">Parsons New School for Design</a> in New York City and at a post-graduate MBA at <a href="http://www.faap.br">FAAP</a> in São Paulo. I am the author of Design Thinking Brasil, a best-selling book published by Campus-Elsevier and of the upcoming "Servir Bem para Servir Sempre", a book about the importance of serving for both large and small businesses and how to do it. I speak at events globally in portuguese, spanish and english about Service Design, Design Thinking, Customer Experience, Innovation Metrics and High-Performance Cultures. </p>
 
-        <div class="container-fluid section-one">
+            </div>
 
-        <h2>Want to chat?</h2>
-        <p>Please contact me at <a href="mailto:mail@luisalt.com">mail@luisalt.com</a>.</p>
+            <div class="container-fluid section-one">
 
-        </div>
+            <h2>Want to chat?</h2>
+            <p>Please contact me at <a href="mailto:mail@luisalt.com">mail@luisalt.com</a>.</p>
 
+            </div>
+
+        </div>    
+
+        
         <!-- <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
         </footer> -->
