Adding some content.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>Alternate Fixed And Scroll Backgrounds</title>
+	<title>Luis Alt</title>
 </head>
 <body>
 	<header class="cd-header">
@@ -20,23 +20,24 @@
 			<ul>
 				<!-- inser more links here -->
 				<li><a href="#0">Home</a></li>
-				<li><a href="#0">About</a></li>
-				<li><a href="#0">Pricing</a></li>
-				<li><a href="#0">Gallery</a></li>
-				<li><a href="#0">Contact</a></li>
+				<li><a href="#1">Ventures</a></li>
+				<li><a href="#2">Speaking</a></li>
+				<li><a href="#3">Teaching</a></li>
+				<li><a href="#4">Contact</a></li>
 			</ul>
 		</nav> <!-- cd-main-nav -->
 	</header>
 
 	<main class="cd-main-content">
 		<div class="cd-fixed-bg cd-bg-1">
-			<h1>Alternate Fixed &amp; Scroll Backgrounds</h1>
+			<h1>Hello,</br>I'm Luis Alt!</h1>
+            <p>Over the last decade, I’ve been helping people and brands to provide better services. I lead innovation and service design projects, I write bestselling books and articles on the subject, I teach at renowned universities around the globe and I speak at events in portuguese, spanish and english.</p>
 		</div> <!-- cd-fixed-bg -->
 
 		<div class="cd-scrolling-bg cd-color-2">
 			<div class="cd-container">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore incidunt suscipit similique, dolor corrupti cumque qui consectetur autem laborum fuga quas ipsam doloribus sequi, mollitia, repellendus sapiente repudiandae labore rerum amet culpa inventore, modi non. Quo nisi veritatis vitae nam, labore fugit. Inventore culpa iusto, officia exercitationem. Voluptates quibusdam odit odio incidunt consequatur, consectetur aspernatur optio vitae molestias, quas repellendus fugit ullam culpa, eligendi et dignissimos voluptatibus illum? Molestias aliquam nostrum quasi ipsa culpa, iusto explicabo ut error, consequuntur enim temporibus, adipisci tempora voluptate, id consequatur mollitia eveniet blanditiis. Illo quod repellendus alias? Cum rem doloremque adipisci accusantium? Saepe, necessitatibus!
+					I am the founder of Livework in Brazil - a global innovation and service design studio - and EISE - the first School of Service Design in the world. I've also created the first Design Thinking course in Latin America at renowned business school ESPM, and I also teach at Transdisciplinary Design Master at Parsons New School for Design in New York City and at a post-graduate MBA at FAAP in São Paulo. I am the author of Design Thinking Brasil, a best-selling book published by Campus-Elsevier and of the upcoming "Servir Bem para Servir Sempre", a book about the importance of serving for both large and small businesses and how to do it. I speak at events globally in portuguese, spanish and english about Service Design, Design Thinking, Customer Experience, Innovation Metrics and High-Performance Cultures.
 				</p>
 			</div> <!-- cd-container -->
 		</div> <!-- cd-scrolling-bg -->
