--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<nav class="cd-main-nav">
 			<ul>
-				<!-- inser more links here -->
+				<!-- insert more links here -->
 				<li><a href="#0">Home</a></li>
 				<li><a href="#1">Ventures</a></li>
 				<li><a href="#2">Speaking</a></li>
@@ -43,7 +43,9 @@
 		</div> <!-- cd-scrolling-bg -->
 
 		<div class="cd-fixed-bg cd-bg-2">
-			<h2>Lorem ipsum dolor sit amet.</h2>
+			<h2>Livework</h2>
+            <p>Texto sobre a Livework aqui.</p>
+
 		</div> <!-- cd-fixed-bg -->
 
 		<div class="cd-scrolling-bg cd-color-3">
