Some changes in content.

--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
 
 	<head>
 		<meta charset="utf-8" />
-		<title>Profound Grid | A grid system for fixed and fluid layouts</title>
+		<title>Luis Alt</title>
 		
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-		<meta name="title" content="Profound Grid | A grid system for fixed and fluid layouts" />
-		<meta name="description" content="Profound Grid is a responsive grid system for fixed and fluid layouts. Built in SCSS, it gives you flexibility and full control. Profound Grid uses negative margins to calculate columns, so unlike with other grid systems, fluid layouts will look exactly the same in every browser." />
-		<meta name="keywords" content="CSS, grid, grid system, Profound, fixed, layout, fluid, responsive, adaptive, design" />
+		<meta name="title" content="Luis Alt" />
+		<meta name="description" content="Over the last decade, I’ve been helping people and brands to provide better services. I lead innovation and service design projects, I write bestselling books and articles on the subject, I teach at renowned universities around the globe and I speak at events in portuguese, spanish and english."/>
 		
-		<meta property="og:url" content="http://www.profoundgrid.com"/>
-		<meta property="og:title" content="Profound Grid | A grid system for fixed and fluid layouts"/> 
+		<meta property="og:url" content="http://www.luisalt.com"/>
+		<meta property="og:title" content="Luis Alt"/> 
 		<meta property="og:type" content="website"/> 
 		<meta property="og:image" content="http://www.profoundgrid.com/img/facebook.jpg"/> 
-		<meta property="og:site_name" content="Profound Grid"/> 
-		<meta property="og:description" content="Profound Grid is a responsive grid system for fixed and fluid layouts. Built in SCSS, it gives you flexibility and full control."/>
+		<meta property="og:site_name" content="Luis Alt"/> 
+		<meta property="og:description" content="Over the last decade, I’ve been helping people and brands to provide better services. I lead innovation and service design projects, I write bestselling books and articles on the subject, I teach at renowned universities around the globe and I speak at events in portuguese, spanish and english."/>
 		<meta name="viewport" content="initial-scale=1,minimum-scale=1,width=device-width">
 
 	    <!-- Javascript -->
@@ -42,7 +41,7 @@
 			<div class="center">
 				<ul>
 					<li>
-						<a href='#' title="Show Grid" id="gridButton" onclick="return false;">Show Grid</a>
+						<a href='#' title="Show Grid" id="gridButton" onclick="return false;">Menu?</a>
 					</li>
 					<li>
 						<a href="/" id="logo"><img src="/img/logo_top.png" /></a>
@@ -58,7 +57,7 @@
 		</nav>
 
 		<header>
-			<h1><a href="http://www.profoundgrid.com/"><span>PROFOUND</span>GRID</a></h1>
+			<h1>Hello,</br>I'm<span>Luis Alt</span>!</h1>
 			<div class="seperator"></div>
 			<h2>A responsive grid system for fixed and fluid layouts. Built in SCSS, it gives you flexibility and full control.</h2>
 
