--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html>
 
 <head>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<link rel="stylesheet" href="/css/styles.css">		
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Lora:400italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Alfa+Slab+One|Gentium+Book+Basic:400,400italic' rel='stylesheet' type='text/css'>
 
 
+	<link rel="stylesheet" href="css/styles.css">		
+
+	<title>Luis Alt - Service Design + Design Thinking</title>
 </head>
 
 <body>
