--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href='https://fonts.googleapis.com/css?family=Alfa+Slab+One|Gentium+Book+Basic:400,400italic' rel='stylesheet' type='text/css'>
 
 
-	<link rel="stylesheet" href="css/styles.css">		
+	<link type="text/css" rel="stylesheet" href="css/styles.css">		
 
 	<title>Luis Alt - Service Design + Design Thinking</title>
 </head>
@@ -33,17 +33,22 @@
 	<div class="main">
 	
 		<div class="hello">
+			<div class="container">
 			<h1>Hello,</br>I’m Luis Alt</h1>
 			<p>Over the last decade, I’ve been using design to help people and brands provide better services. I lead innovation and service design project, I write bestselling books and articles on the subject, I teach at renowned universities around the globe and I speak at events in portuguese, spanish and english.</p>
+			</div>
 		</div>
 
 		<div class="ventures">
+			<div class="container">
 			<h1>Current Ventures</h1>
 			<p>I am the founder of Livework in Brazil - a global innovation and service design studio - and EISE - the first School of Service Innovation in the world. I created the first Design Thinking course in Latin America at Business School ESPM and I teach at Transdisciplinary Design Master at Parsons New School in New York City, at FAAP’s Innovation-focused MBA program and many other institutions as guest lecturer. I am the author of Design Thinking Brasil, a best-selling book published by Campus-Elsevier and of the upcoming “Servir Bem para Servir Sempre”, a book about the importance of good services for both large and small businesses with practical advice on how to do it. I speak at events globally in portuguese, spanish and english about Service Design, Design Thinking, Customer Experience, Innovation Metrics and High-Performance Cultures. </p>
 			<img src="logos-iniciativas.jpg">
+			</div>
 		</div>
 
 		<div class="livework">
+			<div class="container">
 			<h1>Livework</h1>
 			<p>After establishing myself as one of the first Service Design practitioners in Brazil, I decided to bring the first and best agency in the world to the country, becoming a partner for Livework in Latin America. For more than half a decade I’ve been involved in growing the service innovation market by doing projects for that:</p>
 			<ul>
@@ -53,26 +58,33 @@
 			</ul>
 			<p>Some of our clients (click on the logos to read the cases):</p>
 			<img src="logos-livework.jpg">
+			</div>
 		</div>
 
 		<div class="eise">
+			<div class="container">
 			<h1>EISE</h1>
 			<h2>The School of Service Innovation</h2>
 			<p>In early 2012 I co-founded EISE, the first School of Service Innovation in the world. My role was to establish the operations needed to run the business: establishing processes, setting up management platforms and defining what kind of studying experience was possible to deliver. Besides still being a member of the board of the company I am also responsible for teaching the modules “From Products to Services”, “Service Design Practice”, “High-Performance Cultures”, “Backstage" and “Brand It Up!”.</p>
+			</div>
 		</div>
 
 		<div class="dtbr">
+			<div class="container">
 			<h1>Design</br>Thinking</br>Brasil</h1>
 			<p>Published in late 2011, this book was the first national publication about Design Thinking and quickly became a national best-seller. Written with Tenny Pinheiro, it shows readers how empathy, collaboration and experimentation can have a great impact on people, business and societies with local cases and a how-to approach.</p>
+			</div>
 		</div>
 
 		<div class="servir-bem">
+			<div class="container">
 			<h1>Servir bem p/</br>servir sempre!</h1>
 			<p>My upcoming book, that translates to “serve well to serve always!”, takes an inspirational approach to the world of services, focusing on the different elements that are capable of constituting a great, serving, business. With a target on small and medium enterprises owners, the publication is another initiative to help raise the bar of service experiences in Brazil.</p>
-
+			</div>
 		</div>
 
 		<div class="speaking">
+			<div class="container">
 			<h1>Speaking</h1>
 			<p>Being an advocate of (the design) of services and a thought-leader in the field, I split my agenda between doing projects and speaking at events or internally at companies in topics such as: Design Thinking, Service Design, Customer Experience, Design Management, High-Performance Cultures and Innovation (Metrics). </p>
 			<p>If you want to have me talking please reach me at talk@luisalt.com and I will get back shortly.</p>
@@ -83,20 +95,25 @@
 				<li>00/00/0000 - Event Name (Location)</li>
 				<li>00/00/0000 - Event Name (Location)</li>
 			</ul>
+			</div>
 		</div>
 
 		<div class="teaching">
+			<div class="container">
 			<h1>Teaching</h1>
 			<p>Since the beginning of my work in the Service Design field I have been aware that to build an in existed market in the country I had to prepare other professionals so they could help build it too. From the first Design Thinking course in all of Latin America, founded at São Paulo’s renowned business school ESPM to DTBRontheRoad, an workshop based on my first book, and my very own Innovation School EISE, teaching has been an important part of my life. It keeps me connected to new people, new content and pushing me to become a better professional.</p>
 			<p>In the US I have taught to Transdisciplinary Design Master students at Parsons New School in New York City. In Brazil, besides teaching at before-mentioned EISE and ESPM, I teach at FAAP’s Innovation Management MBA and have been invited as a guest lecturer for graduate to phD programs all over the country.</p>
+			</div>
 		</div>
 
 		<div class="press">
+			<div class="container">
 			<h1>Selected press,</br>Interviews and Articles</h1>
 			<ul>
 				<li>Valor Econômico</li>
 				<li>Press Reference</li>
 			</ul>	
+			</div>
 		</div>
 
 	</div>
