--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<li>help companies understand who their clients are and how they have been experiencing their offers.</li>li>
 			</ul>
 			<p>Some of our clients (click on the logos to read the cases):</p>
-			<img src="logos-livework.jpg">
+			<!--<img src="logos-livework.jpg">-->
 			</div>
 		</div>
 
@@ -102,7 +102,7 @@
 		<div class="teaching">
 			<div class="container">
 			<h1>Teaching</h1>
-			<p>Since the beginning of my work in the Service Design field I have been aware that to build an in existed market in the country I had to prepare other professionals so they could help build it too. From the first Design Thinking course in all of Latin America, founded at São Paulo’s renowned business school ESPM to DTBRontheRoad, an workshop based on my first book, and my very own Innovation School EISE, teaching has been an important part of my life. It keeps me connected to new people, new content and pushing me to become a better professional.</p>
+			<p>Since the beginning of my work in the Service Design field I have been aware that to build an inexisting market in the country I had to prepare other professionals so they could help build it too. From the first Design Thinking course in all of Latin America, founded at São Paulo’s renowned business school ESPM to DTBRontheRoad, an workshop based on my first book, and my very own Innovation School EISE, teaching has been an important part of my life. It keeps me connected to new people, new content and pushing me to become a better professional.</p>
 			<p>In the US I have taught to Transdisciplinary Design Master students at Parsons New School in New York City. In Brazil, besides teaching at before-mentioned EISE and ESPM, I teach at FAAP’s Innovation Management MBA and have been invited as a guest lecturer for graduate to phD programs all over the country.</p>
 			</div>
 		</div>
