--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="livework">
 			<div class="container">
 			<h1>Livework</h1>
-			<p>After establishing myself as one of the first Service Design practitioners in Brazil, I decided to bring the first and best agency in the world to the country, becoming a partner for Livework in Latin America. For more than half a decade I’ve been involved in growing the service innovation market by doing projects for that:</p>
+			<p>After establishing myself as one of the first Service Design practitioners in Brazil, I decided to bring the first and best agency in the world to the country, becoming a partner for Livework in Latin America. For more than half a decade I’ve been involved in growing the service innovation market by doing projects that:</p>
 			<ul>
 				<li>build innovation and design capacity inside organisations</li>
 				<li>improve the way companies provide services rethink business models from a product to a service strategy</li>
