Added tables on footer.

--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 	</div>
 
 	<div class="footer">
-		<div>
+		<div class="colophon">
 			<h3>Get in Touch!</h3>
 			<p>I would love to hear from you and am constantly looking for new, interesting people to connect with. If you have something nice to say, reach me at mail@luisalt.com.</p>
 		</div>
-		<div>
+		<div class="colophon">
 			<h3>Follow Me!</h3>
 			<p>Although I don’t like the saying, you can keep up with what I do, think and say reading my articles in english at Medium and I post updates on Twitter and Linkedin (although some of them are in portuguese).</p>
 		</div>
