Adjustments on Press.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 		<div class="press">
 			<div class="container">
-			<h1>Selected press,</br>Interviews and Articles</h1>
+			<h1>Selected Press,</br>Interviews and Articles</h1>
 			<ul>
 				<li>Valor Econômico</li>
 				<li>Press Reference</li>
