Adjustments on Livework.

--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
 			<ul>
 				<li>build innovation and design capacity inside organisations</li>
 				<li>improve the way companies provide services rethink business models from a product to a service strategy</li>
-				<li>help companies understand who their clients are and how they have been experiencing their offers.</li>li>
+				<li>help companies understand who their clients are and how they have been experiencing their offers.</li>
 			</ul>
-			</br>
-			Some of our clients (click on the logos to read the cases):</p>
+			Some of the clients I worked with:</br>(click on the logos to read the cases):</p>
 			<!--<img src="logos-livework.jpg">-->
 			</div>
 		</div>
