Updated the size of the Hello part.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="hello">
 			<div class="container">
 			<h1>Hello!</br>I'm Luis Alt.</h1>
-			<p>Over the last decade, I’ve been using design to help people and brands to provide better services. I lead innovation and service design project, I write bestselling books and articles on the subject, I teach at renowned universities around the globe and I speak at events in portuguese, spanish and english.</br></br>Keep Reading ...</p>
+			<p>Over the last decade, I’ve been using design to help people and brands to provide better services. I lead innovation and service design projects, I write bestselling books and articles on the subject, I teach at renowned universities around the globe and I speak at events in portuguese, spanish and english.</br></br>Keep Reading...</p>
 			</div>
 		</div>
 
