Change in navbar.

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   	<div class="nav">
   		<div class="container">
   			<ul>
-  				<li><a href="">Home</a></li>
-  				<li><a href="">Ventures</a></li>
-  				<li><a href="">Speaking</a></li>
-  				<li><a href="">Teaching</a></li>
-  				<li><a href="">Contact</a></li>
+  				<li class="hello"><a href="#">Home</a></li>
+  				<li class="ventures"><a href="#">Ventures</a></li>
+  				<li class="speaking"><a href="#">Speaking</a></li>
+  				<li class="teaching"><a href="#">Teaching</a></li>
+  				<li class="contact"><a href="#">Contact</a></li>
   			</ul>
 
   	</div>
@@ -35,7 +35,7 @@
 		<div class="hello">
 			<div class="container">
 			<h1>Hello!</br>I'm Luis Alt.</h1>
-			<p>Over the last decade, I’ve been using design to help people and brands to provide better services. I lead innovation and service design projects, I write bestselling books and articles on the subject, I teach at renowned universities around the globe and I speak at events in portuguese, spanish and english.</br></br>Keep Reading...</p>
+			<p>Over the last decade I’ve been using design to help people and brands to provide better services. I lead innovation and service design projects, I write bestselling books and articles on the subject, I teach at renowned universities around the globe and I speak at events in portuguese, spanish and english.</br></br>Keep Reading...</p>
 			</div>
 		</div>
 
@@ -120,7 +120,7 @@
 
 	</div>
 
-	<div class="footer">
+	<div class="contact">
 		<div class="colophon">
 			<h3>Get in Touch!</h3>
 			<p>I would love to hear from you and am constantly looking for new, interesting people to connect with. If you have something nice to say, reach me at mail@luisalt.com.</p>
