Changes in the text and test with ventures.png

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<h1>Current Ventures</h1>
 			<p>I am the founder of Livework in Brazil - a global innovation and service design studio - and EISE - the first School of Service Innovation in the world. I created the first Design Thinking course in Latin America at Business School ESPM and I teach at Transdisciplinary Design Master at Parsons New School in New York City, at FAAP’s Innovation-focused MBA program and many other institutions as guest lecturer. I am the author of Design Thinking Brasil, a best-selling book published by Campus-Elsevier and of the upcoming “Servir Bem para Servir Sempre”, a book about the importance of good services for both large and small businesses with practical advice on how to do it. I speak at events globally in portuguese, spanish and english about Service Design, Design Thinking, Customer Experience, Innovation Metrics and High-Performance Cultures. </p>
 			</br>
-			<img src="img/ventures.png">
+			<img src="img/ventures.png"><img src="img/ventures.png">
 			</div>
 		</div>
 
@@ -55,10 +55,10 @@
 			</p>
 			<ul>
 				<li>build innovation and design capacity inside organisations</li>
-				<li>improve the way companies provide services rethink business models from a product to a service strategy</li>
-				<li>help companies understand who their clients are and how they have been experiencing their offers.</li>
+				<li>improve the way companies provide services and/or rethink business models from a product to a service strategy</li>
+				<li>help companies understand who their clients are and how they have been experiencing their offers</li>
 			</ul>
-			<p>Some of the clients I worked with:</br>(click on the logos to read the cases):</p>
+			<p>Some of the clients I worked with:</p>
 			<!--<img src="logos-livework.jpg">-->
 			</div>
 		</div>
@@ -67,30 +67,29 @@
 			<div class="container">
 			<h1>EISE</h1>
 			<h2>The School of Service Innovation</h2>
-			<p>In early 2012 I co-founded EISE, the first School of Service Innovation in the world. My role was to establish the operations needed to run the business: establishing processes, setting up management platforms and defining what kind of studying experience was possible to deliver. Besides still being a member of the board of the company I am also responsible for teaching the modules “From Products to Services”, “Service Design Practice”, “High-Performance Cultures”, “Backstage" and “Brand It Up!”.</p>
+			<p>In early 2012 I co-founded EISE, the first School of Service Innovation in the world. My role was to establish the operations needed to run the business: creating processes, setting up management platforms and defining what kind of studying experience was possible to deliver. Besides being a member of the board of "Service Thinkers" I am also responsible for teaching the modules “From Products to Services”, “Service Design Practice”, “High-Performance Cultures”, “Backstage" and “Brand It Up!”.</p>
 			</div>
 		</div>
 
 		<div class="dtbr">
 			<div class="container">
 			<h1>Design</br>Thinking</br>Brasil</h1>
-			<p>Published in late 2011, this book was the first national publication about Design Thinking and quickly became a national best-seller. Written with Tenny Pinheiro, it shows readers how empathy, collaboration and experimentation can have a great impact on people, business and societies with local cases and a how-to approach.</p>
+			<p>Published in late 2011, this book was the first national publication about Design Thinking and quickly became a best-seller in the country. Written with Tenny Pinheiro, it shows readers how empathy, collaboration and experimentation can have a great impact on people, business and societies with local cases and a how-to approach.</p>
 			</div>
 		</div>
 
 		<div class="servir-bem">
 			<div class="container">
 			<h1>Servir bem p/</br>servir sempre!</h1>
-			<p>My upcoming book, that translates to “serve well to serve always!”, takes an inspirational approach to the world of services, focusing on the different elements that are capable of constituting a great, serving, business. With a target on small and medium enterprises owners, the publication is another initiative to help raise the bar of service experiences in Brazil.</p>
+			<p>My upcoming book, that translates to “serve well to serve always!”, takes an inspirational approach to the world of services, focusing on the different elements that are capable of constituting a great - serving - business. Targeted to small and medium enterprises owners, the publication is another initiative to help raise the bar of service experiences in Brazil.</p>
 			</div>
 		</div>
 
 		<div class="speaking">
 			<div class="container">
 			<h1>Speaking</h1>
-			<p>Being an advocate of (the design) of services and a thought-leader in the field, I split my agenda between doing projects and speaking at events or internally at companies in topics such as: Design Thinking, Service Design, Customer Experience, Design Management, High-Performance Cultures and Innovation (Metrics). </p>
-			<p>If you want to have me talking please reach me at talk@luisalt.com and I will get back shortly.</p>
-			</br>
+			<p>Being an advocate of (the design of) services and a thought-leader in the field, I split my agenda between doing projects and speaking at events or internally at companies in topics such as: Design Thinking, Service Design, Customer Experience, Design Management, High-Performance Cultures and Innovation (Metrics). </p>
+			<p>If you want to have me talking at your event, please reach me at talk@luisalt.com and I will get back shortly.</p>
 			<h3>Upcoming Events:</h3>
 			<ul>
 				<li>00/00/0000 - Event Name (Location)</li>
