Changes in images.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<li>help companies understand who their clients are and how they have been experiencing their offers</li>
 			</ul>
 			<p>Some of the clients I've worked with:</p>
-			<img src="img/clients.png">
+			<img src="img/livework-clients.png">
 			</div>
 		</div>
 
