Change in universities img.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<h1>Teaching</h1>
 			<p>Since the beginning of my work in the Service Design field I have been aware that to build an inexisting market in the country I had to prepare other professionals so they could help build it too. From the first Design Thinking course in all of Latin America, founded at São Paulo’s renowned business school ESPM to DTBRontheRoad, a workshop based on my first book, down to my very own Innovation School, EISE, teaching has been an important part of my life. It keeps me connected to new people, new content and pushing me to become a better professional.</p>
 			<p>In the US I have taught to Transdisciplinary Design Master students at Parsons New School in New York City while in Brazil, besides teaching at before-mentioned EISE and ESPM, I teach at FAAP’s Innovation Management MBA and have been invited as a guest lecturer from graduate to phD programs all over.</p>
-			<img src="img/universities.jpg">
+			<img src="img/universities.png">
 			</div>
 		</div>
 
