--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 -->
 	<div class="main">
 	
-		<div class="hello">
+		<div class="container-fluid hello">
 			<div class="container">
 			<h1>Hello!</br>I'm Luis Alt.</h1>
 			<p>Over the last decade I’ve been using design to help people and brands to provide better services. I lead innovation and service design projects, I write bestselling books and articles on the subject, I teach at renowned universities around the globe and I speak at events in portuguese, spanish and english.</br></br>Keep reading, keep scrolling...</p>
 			</div>
 		</div>
 
-		<div class="ventures">
+		<div class="container-fluid ventures">
 			<div class="container">
 			<h1>Current Ventures</h1>
 			<p>I am the founder of Livework in Brazil - a global innovation and service design studio - and EISE - the first School of Service Innovation in the world. I created the first Design Thinking course in Latin America at Business School ESPM and I teach at Transdisciplinary Design Master at Parsons New School in New York City, at FAAP’s Innovation-focused MBA program and many other institutions as guest lecturer. I am the author of Design Thinking Brasil, a best-selling book published by Campus-Elsevier and of the upcoming “Servir Bem para Servir Sempre”, a book about the importance of good services for both large and small businesses with practical advice on how to do it. I speak at events globally in portuguese, spanish and english about Service Design, Design Thinking, Customer Experience, Innovation Metrics and High-Performance Cultures. </p>
@@ -48,7 +48,7 @@
 			</div>
 		</div>
 
-		<div class="livework">
+		<div class="container-fluid livework">
 			<div class="container">
 			<h1>Livework</h1>
 			<p>After establishing myself as one of the first Service Design practitioners in Brazil, I decided to bring the first and best agency in the world to the country, becoming a partner for Livework in Latin America. For more than half a decade I’ve been involved in growing the service innovation market by doing projects that:
