Still trying to understand.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 
-		<div class="eise">
+		<div class="container-fluid eise">
 			<div class="container">
 			<h1>EISE</h1>
 			<h2>The School of Service Innovation</h2>
