--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
 			</div>
 		</div>
 
-		<div class="dtbr">
+		<div class="container-fluid dtbr">
 			<div class="container">
 			<h1>Design</br>Thinking</br>Brasil</h1>
 			<p>Published in late 2011, this book was the first national publication about Design Thinking and quickly became a best-seller in the country. Written with Tenny Pinheiro, it shows readers how empathy, collaboration and experimentation can have a great impact on people, business and societies with local cases and a how-to approach.</p>
 			</div>
 		</div>
 
-		<div class="servir-bem">
+		<div class="container-fluid servir-bem">
 			<div class="container">
 			<h1>Servir bem p/</br>servir sempre!</h1>
 			<p>My upcoming book, that translates to “serve well to serve always!”, takes an inspirational approach to the world of services, focusing on the different elements that are capable of constituting a great - serving - business. Targeted to small and medium enterprises owners, the publication is another initiative to help raise the bar of service experiences in Brazil.</p>
 			</div>
 		</div>
 
-		<div class="speaking">
+		<div class="container-fluid speaking">
 			<div class="container">
 			<h1>Speaking</h1>
 			<p>Being an advocate of (the design of) services and a thought-leader in the field, I split my agenda between doing projects and speaking at events (or internally for organisations) in topics such as: Design Thinking, Service Design, Customer Experience, Design Management, High-Performance Cultures and Innovation (Metrics). </p>
@@ -100,7 +100,7 @@
 		
 		</div>
 
-		<div class="teaching">
+		<div class="container-fluid teaching">
 			
 			<div class="container">
 			<h1>Teaching</h1>
@@ -128,7 +128,7 @@
 
 	</div>
 
-	<div class="contact">
+	<div class="container-fluid contact">
 
 		<div class="colophon">
 			<h3>Get in Touch!</h3>
